--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -4,14 +4,14 @@ imports:
 framework:
     test: ~
     session:
-        storage_id: session.storage.native
-        #storage_id: session.storage.mock_file
-    #profiler:
-    #    collect: false
+        #storage_id: session.storage.native
+        storage_id: session.storage.mock_file
+    profiler:
+        collect: false
     
-#web_profiler:
-#    toolbar: false
-#    intercept_redirects: false
+web_profiler:
+    toolbar: false
+    intercept_redirects: false
 
 swiftmailer:
     disable_delivery: true
