--- a/build.xml
+++ b/build.xml
@@ -130,7 +130,7 @@
     </target>
 
     <target name="phpunit-ci" description="Run unit tests with PHPUnit">
-        <exec executable="vendor/bin/simple-phpunit" failonerror="true">
+        <exec executable="vendor/bin/phpunit" failonerror="true">
             <arg line="--configuration=${basedir}"/>
             <arg line="--coverage-php=${basedir}/build/artifacts/coverage/clover_core.cov"/>
         </exec>
