--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -47,7 +47,8 @@
         <server name="KERNEL_CLASS" value="AppKernel" />
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="78" />
         <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test" />
-        <env name="HTTP_TEST_URL" value="http://127.0.0.1:8000/app_test.php" />
+        <env name="HTTP_TEST_HOST" value="http://127.0.0.1:8000" />
+        <env name="HTTP_TEST_URL" value="/app_test.php" />
     </php>
 
     <filter>
