--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,31 +15,34 @@
 
     <testsuites>
         <testsuite name="Collector">
-            <directory suffix=".php">./tests/Core/Collector</directory>
+            <directory suffix=".php">./tests/Fi/CoreBundle/Collector</directory>
         </testsuite>
         <testsuite name="Command">
-            <directory suffix=".php">./tests/Core/Command</directory>
+            <directory suffix=".php">./tests/Fi/CoreBundle/Command</directory>
         </testsuite>
         <testsuite name="Controller">
-            <directory suffix=".php">./tests/Core/Controller</directory>
+            <directory suffix=".php">./tests/Fi/CoreBundle/Controller</directory>
         </testsuite>
         <testsuite name="DependencyInjection">
-            <directory suffix=".php">./tests/Core/DependencyInjection</directory>
+            <directory suffix=".php">./tests/Fi/CoreBundle/DependencyInjection</directory>
         </testsuite>
         <testsuite name="Entity">
-            <directory suffix=".php">./tests/Core/Entity</directory>
+            <directory suffix=".php">./tests/Fi/CoreBundle/Entity</directory>
         </testsuite>
         <testsuite name="Form">
-            <directory suffix=".php">./tests/Core/Form</directory>
+            <directory suffix=".php">./tests/Fi/CoreBundle/Form</directory>
+        </testsuite>
+        <testsuite name="Utils">
+            <directory suffix=".php">./tests/Fi/CoreBundle/Utils</directory>
         </testsuite>
         <testsuite name="CommandPA">
-            <directory suffix=".php">./tests/PannelloAmministrazione/Command</directory>
+            <directory suffix=".php">./tests/Fi/PannelloAmministrazioneBundle/Command</directory>
         </testsuite>
         <testsuite name="DependencyinjectionPA">
-            <directory suffix=".php">./tests/PannelloAmministrazione/Dependencyinjection</directory>
+            <directory suffix=".php">./tests/Fi/PannelloAmministrazioneBundle/Dependencyinjection</directory>
         </testsuite>
         <testsuite name="ControllerPA">
-            <directory suffix=".php">./tests/PannelloAmministrazione/Controller</directory>
+            <directory suffix=".php">./tests/Fi/PannelloAmministrazioneBundle/Controller</directory>
         </testsuite>
     </testsuites>
     
