--- a/.travis.yml
+++ b/.travis.yml
@@ -96,6 +96,8 @@ after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "7.0" ]]; then php vendor/bin/php-coveralls -v; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.1" ]]; then php vendor/bin/php-coveralls -v; fi
   - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then php vendor/bin/php-coveralls -v; fi
+  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar -t 3; fi;
+  - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover build/artifacts/coverage/clover.xml; fi;
   - rm tests/app/dbtest.sqlite
   - php bin/console server:stop --env=test
   - kill `ps -ef | grep selenium | awk '{ print $2 }'`
