--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,7 +5,7 @@ filter:
         - tests/*
 tools:
     external_code_coverage: true
-    php_code_coverage: true
+    #php_code_coverage: true
     php_code_sniffer:
         enabled: true
         config:
