--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,4 +20,4 @@ tags.asp=false
 tags.short=false
 test.src.dir=${file.reference.tests-app}
 testing.providers=PhpUnit
-web.root=web
+web.root=tests/web
