--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - composer install
-  - php bin/console fifree2:install admin admin admin@admin.it --env=test
+  - php tests/bin/console fifree2:install admin admin admin@admin.it --env=test
   # - php bin/console server:start --env=test
   - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
   - /usr/bin/php -v
@@ -99,7 +99,7 @@ after_success:
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar -t 3; fi;
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover build/artifacts/coverage/clover.xml; fi;
   - rm tests/app/dbtest.sqlite
-  - php bin/console server:stop --env=test
+  - php tests/bin/console server:stop --env=test
   - kill `ps -ef | grep selenium | awk '{ print $2 }'`
 
 after_failure:
