--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -4,7 +4,8 @@ filter:
     excluded_paths:
         - tests/*
 tools:
-    external_code_coverage: true
+    external_code_coverage:
+        timeout: 3600    # Timeout in seconds.
     #php_code_coverage: true
     php_code_sniffer:
         enabled: true
