gestione sito in manutenzione

--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@ parameters:
 #    fi_core.example.class: Fi\CoreBundle\Example 
   ficorebundle.db.table_schema: 
   ficorebundle.db.table_prefix: __corebundle_
+  maintenanceLockFilePath: "%kernel.cache_dir%/maintenance.lock"  
   
 services:
     request:
@@ -139,5 +140,12 @@ services:
             
     kernel.listener.response_listener:
         class: Fi\CoreBundle\Listener\ResponseListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+            
+    fifree.maintenance_listener.response_listener:
+        class: Fi\CoreBundle\Listener\MaintenanceListener
+        arguments: 
+            - "%maintenanceLockFilePath%"
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
