--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ before_script:
   - composer install
   - php tests/bin/console fifree2:install admin admin admin@admin.it --env=test
   # - php bin/console server:start --env=test
-  - sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
+  #- sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
   - /usr/bin/php -v
   # - wget -O - http://127.0.0.1:8000/app_test.php/adminpanel
   
@@ -99,8 +99,8 @@ after_success:
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar -t 3; fi;
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover build/artifacts/coverage/clover.xml; fi;
   - rm tests/app/dbtest.sqlite
-  - php tests/bin/console server:stop --env=test
-  - kill `ps -ef | grep selenium | awk '{ print $2 }'`
+  #- php tests/bin/console server:stop --env=test
+  #- kill `ps -ef | grep selenium | awk '{ print $2 }'`
 
 after_failure:
   - sudo cat /var/log/apache2/error.log
