--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -26,6 +26,6 @@ swiftmailer:
 parameters:
     user4test: admin
     usernoprivileges4test: user4test
-    mink_url: "http://127.0.0.1:8000/app_test.php"
+    mink_url: "http://localhost:8000/app_test.php"
     selenium_driver_type: "firefox"
     
