--- a/tests/app/config/config_test.yml
+++ b/tests/app/config/config_test.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: config.yml }
+    - { resource: config_dev.yml }
 
 framework:
     test: ~
@@ -26,6 +26,6 @@ swiftmailer:
 parameters:
     user4test: admin
     usernoprivileges4test: user4test
-    mink_url: "http://localhost:8000/app_test.php"
+    mink_url: "http://127.0.0.1:8000/app_test.php"
     selenium_driver_type: "firefox"
     
