--- a/phpunit.pannelloamministrazione.xml.dist
+++ b/phpunit.pannelloamministrazione.xml.dist
@@ -14,22 +14,16 @@
     bootstrap                   = "tests/bootstrap.php" >
 
     <testsuites>
-        <testsuite name="Corebundle">
-            <directory suffix=".php">./tests/Fi/CoreBundle/Collector</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Command</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Controller</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/DependencyInjection</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Entity</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Form</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Utils</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Functional</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Listener</directory>
+        <testsuite name="Pannelloamministrazionebundle">
+            <directory suffix=".php">./tests/Fi/PannelloAmministrazioneBundle/Command</directory>
+            <directory suffix=".php">./tests/Fi/PannelloAmministrazioneBundle/Dependencyinjection</directory>
+            <directory suffix=".php">./tests/Fi/PannelloAmministrazioneBundle/Controller</directory>
         </testsuite>
     </testsuites>
     
     <php>
         <server name="KERNEL_CLASS" value="AppKernel" />
-        <env name="SYMFONY_DEPRECATIONS_HELPER" value="16" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="15" />
         <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test" />
         <const name="WEB_SERVER_HOST" value="localhost" />
         <const name="WEB_SERVER_PORT" value="8000" />
