convertito commands di pannello amministrazione in servizio

--- a/src/Fi/PannelloAmministrazioneBundle/Resources/config/services.yml
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/config/services.yml
@@ -10,6 +10,11 @@ services:
         arguments:
             ['@service_container']
             
+    pannelloamministrazione.commands:
+        class: Fi\PannelloAmministrazioneBundle\DependencyInjection\PannelloamministrazioneCommands
+        arguments:
+            ['@service_container']
+
     pannelloamministrazione.command.generateentities:
         class: Fi\PannelloAmministrazioneBundle\Command\GenerateentitiesCommand
         public: false
