--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="Fifree2 CoreBundle" default="build">
     <target name="build"
-            depends="prepare,composer-run-install,php-lint-ci,phpmd-ci,phpcs-ci,phpcpd-ci,php-security-checker,phpunit-ci, phpunit-ci-pa, phpunit-clover"/>
+            depends="prepare, php-lint-ci, phpmd-ci, phpcs-ci, phpcpd-ci, php-security-checker, phpunit-ci, phpunit-ci-pa, phpunit-clover"/>
 
     <target name="clean" description="Cleanup build artifacts">
         <delete dir="build/artifacts/coverage"/>
