--- a/src/Fi/PannelloAmministrazioneBundle/Resources/config/services.yml
+++ b/src/Fi/PannelloAmministrazioneBundle/Resources/config/services.yml
@@ -31,6 +31,7 @@ services:
 
     pannelloamministrazione.generatorhelper:
         class: Fi\PannelloAmministrazioneBundle\DependencyInjection\GeneratorHelper
+        public: true
         arguments:
             ['@service_container']
 
