--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ before_script:
   - sudo sed -i 's/Listen 80/Listen 8000/' /etc/apache2/ports.conf
   - sudo sed -i 's/NameVirtualHost \*:80/NameVirtualHost \*:8000/' /etc/apache2/ports.conf
   - sudo service apache2 restart
-  - if [[ "BROWSER" != "chrome" ]]; then sudo sed -i 's/firefox/chrome 8000/' ./tests/app/config/config_test.yml; fi
+  - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome 8000/' ./tests/app/config/config_test.yml; fi
   
   - if [[ "$DB" == "pgsql" ]]; then echo "PROVISIONING WITH PostgreSQL"; fi
   - if [[ "$DB" == "pgsql" ]]; then cp -f ./tests/build/parameters.pgsql.yml $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
