--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,6 @@ env:
   - DB=mysql
   - DB=pgsql
   - DB=sqlite3
-  - BROWSER=firefox
   - BROWSER=chrome
   
 #sudo: required
@@ -42,12 +41,8 @@ cache:
     
 addons:
   firefox: "45.8.0esr"
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-  
+  chrome: stable
+
 before_script:
   - sudo apt-get update
   - sudo apt-get install apache2 libapache2-mod-fastcgi make
@@ -68,7 +63,6 @@ before_script:
   - sudo sed -i 's/Listen 80/Listen 8000/' /etc/apache2/ports.conf
   - sudo sed -i 's/NameVirtualHost \*:80/NameVirtualHost \*:8000/' /etc/apache2/ports.conf
   - sudo service apache2 restart
-  - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome 8000/' ./tests/app/config/config_test.yml; fi
   
   - if [[ "$DB" == "pgsql" ]]; then echo "PROVISIONING WITH PostgreSQL"; fi
   - if [[ "$DB" == "pgsql" ]]; then cp -f ./tests/build/parameters.pgsql.yml $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
@@ -88,6 +82,11 @@ before_script:
   
   - if [[ "$DB" == "sqlite3" ]]; then echo "PROVISIONING WITH Sqlite3"; fi
   - if [[ "$DB" == "sqlite3" ]]; then cp -f ./tests/build/parameters.sqlite.yml $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
+  
+  - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' ./tests/app/config/config_test.yml; fi
+  - if [[ "BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && mkdir -p $HOME/bin && mv chromedriver $HOME/bin; fi
+  - if [[ "BROWSER" == "chrome" ]]; then echo "export PATH=$PATH:$HOME/bin" >> $HOME/.bash_profile; fi
+  
   
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
@@ -123,6 +122,8 @@ after_failure:
   - sudo cat /var/log/apache2/other_vhosts_access.log
   - sudo cat /var/log/apache2/fifree_error.log
   - sudo cat /var/log/apache2/fifree_access.log
+  - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/selenium2.log
+  - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/webserver.log
   - sudo cat $TRAVIS_BUILD_DIR/tests/var/logs/test/test.log
 
 notifications:
