--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,8 @@ before_script:
   - if [[ "$DB" == "sqlite3" ]]; then echo "PROVISIONING WITH Sqlite3"; fi
   - if [[ "$DB" == "sqlite3" ]]; then cp -f ./tests/build/parameters.sqlite.yml $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
   
-  - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' ./tests/app/config/config_test.yml; fi
+  - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
+  - if [[ "BROWSER" == "chrome" ]]; then sudo cat $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
   - if [[ "BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && mkdir -p $HOME/bin && mv chromedriver $HOME/bin; fi
   - if [[ "BROWSER" == "chrome" ]]; then echo "export PATH=$PATH:$HOME/bin" >> $HOME/.bash_profile; fi
   
@@ -112,6 +113,8 @@ after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "7.2" ]]; then php vendor/bin/php-coveralls -v; fi
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar -t 3; fi;
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover build/artifacts/coverage/clover.xml; fi;
+  - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/selenium2.log
+  - sudo cat $TRAVIS_BUILD_DIR/build/artifacts/logs/webserver.log
   - rm tests/app/dbtest.sqlite
   #- php tests/bin/console server:stop --env=test
   #- kill `ps -ef | grep selenium | awk '{ print $2 }'`
