--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,12 @@ matrix:
 
 # Configure different DB environments
 env:
-  - DB=mysql
-  - DB=pgsql
-  - DB=sqlite3
-  - BROWSER=chrome
+  - DB=mysql BROWSER=chrome
+  - DB=mysql BROWSER=firefox
+  - DB=pgsql BROWSER=chrome
+  - DB=pgsql BROWSER=firefox
+  - DB=sqlite3 BROWSER=chrome
+  - DB=sqlite3 BROWSER=firefox
   
 #sudo: required
 #dist: trusty
@@ -85,9 +87,8 @@ before_script:
   
   - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
   - if [[ "BROWSER" == "chrome" ]]; then sudo cat $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
-  - if [[ "BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && mkdir -p $HOME/bin && mv chromedriver $HOME/bin; fi
+  - if [[ "BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/local/bin; fi
   - if [[ "BROWSER" == "chrome" ]]; then echo "export PATH=$PATH:$HOME/bin" >> $HOME/.bash_profile; fi
-  
   
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
