--- a/.travis.yml
+++ b/.travis.yml
@@ -85,10 +85,10 @@ before_script:
   - if [[ "$DB" == "sqlite3" ]]; then echo "PROVISIONING WITH Sqlite3"; fi
   - if [[ "$DB" == "sqlite3" ]]; then cp -f ./tests/build/parameters.sqlite.yml $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
   
-  - if [[ "BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
-  - if [[ "BROWSER" == "chrome" ]]; then sudo cat $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
-  - if [[ "BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/local/bin; fi
-  - if [[ "BROWSER" == "chrome" ]]; then echo "export PATH=$PATH:$HOME/bin" >> $HOME/.bash_profile; fi
+  - if [[ "$BROWSER" == "chrome" ]]; then sudo sed -i 's/firefox/chrome/' $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
+  - if [[ "$BROWSER" == "chrome" ]]; then sudo cat $TRAVIS_BUILD_DIR/tests/app/config/config_test.yml; fi
+  - if [[ "$BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/local/bin; fi
+  - if [[ "$BROWSER" == "chrome" ]]; then echo "export PATH=$PATH:$HOME/bin" >> $HOME/.bash_profile; fi
   
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
