--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/symfony": "3.4.*",
-        "twig/twig": "^1.0",
+        "twig/twig": "^1.0|^2.0",
         "friendsofsymfony/user-bundle": "~2.0"
     },
     "require-dev": {
