--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,46 +1,15 @@
+inherit: true
+
 checks:
-    php: true
-    
+  php: true
+
 build:
   nodes:
     analysis:
       tests:
         override: [php-scrutinizer-run]
-        
+
 filter:
-    excluded_paths:
-        - tests/*
-tools:
-    external_code_coverage:
-        timeout: 3600    # Timeout in seconds.
-    php_code_sniffer:
-        enabled: true
-        config:
-            standard: PSR2
-        filter:
-            paths: ["src/*", "tests/*"]
-    php_cpd:
-        enabled: true
-        excluded_dirs: ["build", "tests", "vendor"]
-    php_cs_fixer:
-        enabled: true
-        config:
-            level: all
-        filter:
-            paths: ["src/*", "tests/*"]
-    php_loc:
-        enabled: true
-        excluded_dirs: ["build", "tests", "vendor"]
-    php_mess_detector:
-        enabled: true
-        filter:
-            paths: ["src/*"]
-    php_pdepend:
-        enabled: true
-        excluded_dirs: ["build", "tests", "vendor"]
-    php_analyzer: true
-    php_analyzer:
-        filter:
-            paths: ["src/*", "tests/*"]
-    sensiolabs_security_checker: true
-    
+  paths:
+    - src/*
+    - tests/*
