--- a/src/Fi/CoreBundle/Resources/config/services.yml
+++ b/src/Fi/CoreBundle/Resources/config/services.yml
@@ -45,6 +45,12 @@ services:
         public: true
         arguments: [ '@service_container', '@security.token_storage', '@doctrine.orm.entity_manager' ]
             
+    #Utility tabelle
+    ficorebundle.tabelle.utility:
+        class: Fi\CoreBundle\DependencyInjection\TabelleUtility
+        public: true
+        arguments: [ '@service_container', '@doctrine.orm.entity_manager' ]
+            
     ficorebundle.tblprefix_subscriber:
         class: Fi\CoreBundle\Subscriber\TablePrefixSubscriber
         arguments: ["%ficorebundle.db.table_prefix%"]
