--- a/.travis.yml
+++ b/.travis.yml
@@ -93,6 +93,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - composer install
+  - php tests/bin/console fifree2:dropdatabase --force --env=test
   - php tests/bin/console fifree2:install admin admin admin@admin.it --env=test
   # - php bin/console server:start --env=test
   #- sh vendor/bin/selenium-server-standalone > /dev/null 2>&1 &
