--- a/tests/app/config/config.yml
+++ b/tests/app/config/config.yml
@@ -22,7 +22,7 @@ framework:
     session:
         # handler_id set to null will use default session handler from php.ini
         handler_id: session.handler.native_file
-        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+        save_path: '%kernel.project_dir%/tests/var/sessions/%kernel.environment%'
     fragments:       ~
     http_method_override: true
     #Questo serve per fare la traduzione della FosUserBundle per le label di username, password, remember_me, ecc..
