move to facebook driver

--- a/composer.json
+++ b/composer.json
@@ -77,9 +77,9 @@
         "sebastian/phpcpd": "^2.0",
         "sensiolabs/security-checker": "^4.0",
         "squizlabs/php_codesniffer": "^2.7",
-        "se/selenium-server-standalone": "^2.0",
-        "phpunit/phpcov": "^3.0|^4.0"
-        
+        "se/selenium-server-standalone": "3.4.*",
+        "phpunit/phpcov": "^3.0|^4.0",
+        "facebook/webdriver": "^1.5"
     },
     "scripts": {
         "symfony-scripts": [
