--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,9 @@ before_script:
   - if [[ "$BROWSER" == "chrome" ]]; then sudo cat $TRAVIS_BUILD_DIR/tests/app/config/parameters.yml; fi
   - if [[ "$BROWSER" == "chrome" ]]; then wget https://chromedriver.storage.googleapis.com/2.35/chromedriver_linux64.zip && unzip chromedriver_linux64.zip && sudo mv chromedriver /usr/local/bin; fi
   
+  - if [[ "$BROWSER" == "firefox" ]]; then wget https://github.com/mozilla/geckodriver/releases/download/v0.19.1/geckodriver-v0.19.1-linux64.tar.gz && tar -xzf geckodriver-v0.19.1-linux64.tar.gz -C geckodriver && sudo mv geckodriver /usr/local/bin; fi
+
+  
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
