--- a/.travis.yml
+++ b/.travis.yml
@@ -94,6 +94,7 @@ before_script:
 
   
   - "export DISPLAY=:99.0"
+  - "export DBUS_SESSION_BUS_ADDRESS=/dev/null"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
   - composer install
