--- a/composer.json
+++ b/composer.json
@@ -69,8 +69,6 @@
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/web-server-bundle": "3.4.*",
-        "behat/mink-selenium2-driver": "^1.3",
-        "behat/symfony2-extension": "^2.1",
         "satooshi/php-coveralls": "^2.0",
         "mockery/mockery": "^0.9.5",
         "phpmd/phpmd": "^2.4",
@@ -78,8 +76,8 @@
         "sensiolabs/security-checker": "^4.0",
         "squizlabs/php_codesniffer": "^2.7",
         "se/selenium-server-standalone": "3.4.*",
-        "phpunit/phpcov": "^3.0|^4.0",
-        "facebook/webdriver": "^1.5"
+        "facebook/webdriver": "^1.5",
+        "phpunit/phpcov": "^3.0|^4.0"
     },
     "scripts": {
         "symfony-scripts": [
