--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -39,6 +39,11 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory>./src</directory>
+            <exclude>
+                <!--<directory suffix=".php">/path/to/files</directory>-->
+                <file>/src/Fi/CoreBundle/Controller/FfprincipaleController.php</file>
+                <file>/src/Fi/CoreBundle/Controller/FfsecondariaController.php</file>
+            </exclude>
         </whitelist>
     </filter>
     
