--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
 <project name="Fifree2 CoreBundle" default="build">
     <target name="build"
-            depends="prepare, php-lint-ci, phpmd-ci, phpcs-ci, phpcpd-ci, php-security-checker, phpunit-ci, phpunit-ci-pa, phpunit-clover"/>
+            depends="prepare, php-lint-ci, phpmd-ci, phpcs-ci, phpcpd-ci, php-security-checker, phpunit-ci, phpunit-ci-pa,phpunit-ci-functional, phpunit-ci-pa-functional, phpunit-clover"/>
 
     <target name="clean" description="Cleanup build artifacts">
         <delete dir="build/artifacts/coverage"/>
@@ -131,15 +131,29 @@
 
     <target name="phpunit-ci" description="Run unit tests with PHPUnit">
         <exec executable="vendor/bin/simple-phpunit" failonerror="true">
-            <arg line="--configuration=${basedir}"/>
+            <arg line="--configuration=${basedir}/tools/phpunit/phpunit.xml.dist"/>
             <arg line="--coverage-php=${basedir}/build/artifacts/coverage/clover_core.cov"/>
         </exec>
     </target>
 
     <target name="phpunit-ci-pa" description="Run unit tests with PHPUnit Pannello amministrazione">
         <exec executable="vendor/bin/simple-phpunit" failonerror="true">
-            <arg line="--configuration=${basedir}/phpunit.pannelloamministrazione.xml.dist"/>
+            <arg line="--configuration=${basedir}/tools/phpunit/phpunit.pannelloamministrazione.xml.dist"/>
             <arg line="--coverage-php=${basedir}/build/artifacts/coverage/clover_pa.cov"/>
+        </exec>
+    </target>
+
+    <target name="phpunit-ci-functional" description="Run unit tests with PHPUnit">
+        <exec executable="vendor/bin/simple-phpunit" failonerror="true">
+            <arg line="--configuration=${basedir}/tools/phpunit/phpunit.functional.xml.dist"/>
+            <arg line="--coverage-php=${basedir}/build/artifacts/coverage/clover_core_functional.cov"/>
+        </exec>
+    </target>
+
+    <target name="phpunit-ci-pa-functional" description="Run unit tests with PHPUnit Pannello amministrazione">
+        <exec executable="vendor/bin/simple-phpunit" failonerror="true">
+            <arg line="--configuration=${basedir}/tools/phpunit/phpunit.pannelloamministrazione.functional.xml.dist"/>
+            <arg line="--coverage-php=${basedir}/build/artifacts/coverage/clover_pa_functional.cov"/>
         </exec>
     </target>
 
