--- a/tools/phpunit/phpunit.pannelloamministrazione.xml.dist
+++ b/tools/phpunit/phpunit.pannelloamministrazione.xml.dist
@@ -11,34 +11,28 @@
     processIsolation            = "false"
     stopOnFailure               = "true"
     syntaxCheck                 = "false"
-    bootstrap                   = "tests/bootstrap.php" >
+    bootstrap                   = "./../../tests/bootstrap.php" >
 
     <testsuites>
-        <testsuite name="Corebundle">
-            <directory suffix=".php">./tests/Fi/CoreBundle/Collector</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Command</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Controller</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/DependencyInjection</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Entity</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Form</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Utils</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Functional</directory>
-            <directory suffix=".php">./tests/Fi/CoreBundle/Listener</directory>
+        <testsuite name="Pannelloamministrazionebundle">
+            <directory suffix=".php">./../../tests/Fi/PannelloAmministrazioneBundle/Command</directory>
+            <directory suffix=".php">./../../tests/Fi/PannelloAmministrazioneBundle/Controller</directory>
+            <directory suffix=".php">./../../tests/Fi/PannelloAmministrazioneBundle/DependencyInjection</directory>
         </testsuite>
     </testsuites>
     
     <php>
         <server name="KERNEL_CLASS" value="AppKernel" />
-        <env name="SYMFONY_DEPRECATIONS_HELPER" value="36" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="99" />
         <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test" />
         <const name="WEB_SERVER_HOST" value="localhost" />
         <const name="WEB_SERVER_PORT" value="8000" />
-        <const name="WEB_SERVER_DOCROOT" value="./tests/web" />
+        <const name="WEB_SERVER_DOCROOT" value="./../../tests/web" />
     </php>
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory>./src</directory>
+            <directory>./../../src</directory>
         </whitelist>
     </filter>
     
