--- a/composer.json
+++ b/composer.json
@@ -79,6 +79,9 @@
         "facebook/webdriver": "^1.5",
         "phpunit/phpcov": "^3.0|^4.0"
     },
+    "suggest": {
+        "ext-apcu": "The extension required to use cache"
+    },
     "scripts": {
         "symfony-scripts": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
